<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xyt15080656916@qq.com">xyt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>map_core</depend>
  <depend>map_ros</depend>
  <depend>map_msgs</depend>
  <depend>grid_map_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
